fixed sponsor white space

--- a/src/components/mainPage/sponsors.css
+++ b/src/components/mainPage/sponsors.css
@@ -16,9 +16,8 @@
 .sponsor-list {
 	font-family: 'Arial';
 	font-weight: 800;
-
 	width: 100vw;
-	height: 100vw;
+	height: 100vh;
 	flex: 3;
 	display: flex;
 	flex-direction: column;
